force-app/main/default/objects/Variable_Fee_Profile__mdt/Variable_Fee_Profile__mdt.object-meta.xml
<CustomObject>
    <label>Variable Fee Profile</label>
    <pluralLabel>Variable Fee Profiles</pluralLabel>
</CustomObject>