force-app/main/default/objects/Variable_Fee_Profile__mdt/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ELFI</fullName>
                <default>true</default>
                <label>ELFI</label>
            </value>
            <value>
                <fullName>Rhino</fullName>
            </value>
            <value>
                <fullName>Seahold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>