force-app/main/default/objects/Variable_Fee_Profile__mdt/fields/Effective_At__c.field-meta.xml
<CustomField>
    <fullName>Effective_At__c</fullName>
    <label>Effective At</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan Setup</fullName>
                <default>true</default>
                <label>Loan Setup</label>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>One Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>