force-app/main/default/objects/Variable_Fee_Profile__mdt/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>%</fullName>
                <default>true</default>
                <label>%</label>
            </value>
            <value>
                <fullName>$</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>