force-app/main/default/objects/Variable_Fee_Profile__mdt/fields/Is_BOM__c.field-meta.xml
<CustomField>
    <fullName>Is_BOM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is BOM</label>
    <type>Checkbox</type>
</CustomField>