force-app/main/default/objects/Variable_Fee_Profile__mdt/fields/Type_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Loan__c</fullName>
    <label>Type of Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facility Loan</fullName>
                <default>true</default>
                <label>Facility Loan</label>
            </value>
            <value>
                <fullName>Lump-Sum</fullName>
            </value>
            <value>
                <fullName>Treatment Loan</fullName>
            </value>
            <value>
                <fullName>Treatment Loan 2</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Lawyer Loan</fullName>
            </value>
            <value>
                <fullName>Lawyer Loan-Contingency Fee Acceleration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>